# Mutter

./: .gitignore  Memo.spec  README.md  build_executable.py  convert_icons.ps1  hook-faster_whisper.py  package_builder.py  pyproject.toml  requirements.txt  test.py  version_info.txt
.cursor/: rules.json  rules.md
resources/icons/: app.icns
scripts/: create_icons.py  dev.py  setup.py  svg_to_png.py
specs/: resilience_architecture.md
src/: main.py  test_notifications.py
src/application/: app_bootstrap.py  app_service.py  recording_service.py  service_manager.py
src/domain/: settings.py
src/domain/entities/: __init__.py  llm_result.py  recording.py  transcription.py
src/domain/events/: __init__.py  processing_events.py  recording_events.py
src/domain/value_objects/: __init__.py  audio_metadata.py  transcription_metadata.py
src/gui/: settings_window.py  system_tray.py
src/infrastructure/audio/: recorder.py
src/infrastructure/hotkeys/: base.py  linux.py  linux_wayland.py  macos.py  windows.py
src/infrastructure/llm/: __init__.py  download_manager.py  embedded_processor.py  processor.py
src/infrastructure/persistence/: settings_repository.py
src/infrastructure/recording/: recording_service.py
src/infrastructure/transcription/: transcriber.py
src/presentation/: system_tray.py  theme.py
src/presentation/system_extensions/: linux.py  macos.py  windows.py
src/presentation/toast/: custom_toast.py
src/presentation/windows/: download_manager.py  settings.py  waveform_visualizer.py
