[tool.poetry]
name = "voice-recorder"
version = "0.1.0"
description = "A voice recorder with automatic transcription"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
PySide6 = "^6.5.0"
sounddevice = "^0.4.6"
numpy = "^1.24.0"
faster-whisper = "^0.9.0"
pywin32 = {version = "^306", platform = "win32"}
cairosvg = "^2.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
voice-recorder = "src.main:main" 